# Solutions/Marain.Tenancy.OpenApi.Service/Marain/Tenancy/OpenApi/TenancyService.cs
@@ -101,14 +101,21 @@ namespace Marain.Tenancy.OpenApi
         /// Implements the create tenant operation.
         /// </summary>
         /// <param name="tenantId">The tenant ID.</param>
+        /// <param name="tenantName">The name of the new child tenant.</param>
         /// <param name="context">The OpenApi context.</param>
         /// <returns>A <see cref="Task{TResult}"/> representing the result of the asynchronous operation.</returns>
         [OperationId(CreateChildTenantOperationId)]
         public async Task<OpenApiResult> CreateChildTenantAsync(
             string tenantId,
+            string tenantName,
             IOpenApiContext context)
         {
             if (string.IsNullOrEmpty(tenantId))
+            {
+                throw new OpenApiBadRequestException("Bad request");
+            }
+
+            if (string.IsNullOrEmpty(tenantName))
             {
                 throw new OpenApiBadRequestException("Bad request");
             }
@@ -122,7 +129,7 @@ namespace Marain.Tenancy.OpenApi
             {
                 try
                 {
-                    ITenant result = await this.tenantProvider.CreateChildTenantAsync(tenantId).ConfigureAwait(false);
+                    ITenant result = await this.tenantProvider.CreateChildTenantAsync(tenantId, tenantName).ConfigureAwait(false);
                     return this.CreatedResult(this.linkResolver, GetTenantOperationId, ("tenantId", result.Id));
                 }
                 catch (TenantNotFoundException)
@@ -373,6 +380,8 @@ namespace Marain.Tenancy.OpenApi
         private class RedactedRootTenant : ITenant
         {
             public string Id => RootTenant.RootTenantId;
+
+            public string Name => "Root";
 
             public PropertyBag Properties { get; } = new PropertyBag();
 
